# nxvpn-lwip

./: settings.gradle
.github/workflows/: android-1.yml  android.yml  main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nxdevelopers/nxvpn/: MainActivity.java  NxVpn.java
app/src/main/java/com/nxdevelopers/nxvpn/configs/: ExportConfig.java  ImportConfig.java
app/src/main/java/com/nxdevelopers/nxvpn/drawer/: DrawerLog.java  LogsAdapter.java
app/src/main/java/com/nxdevelopers/nxvpn/injector/: HTTPSupport3.java  HTTPThread.java  HttpProxyCustom.java  SSLPayloadTunnelProxy.java  SSLProxy.java  SSLTunnelProxy.java  TLSSocketFactory.java
app/src/main/java/com/nxdevelopers/nxvpn/logs/: AppLogManager.java  LogItem.java
app/src/main/java/com/nxdevelopers/nxvpn/notification/: NotificationService.java
app/src/main/java/com/nxdevelopers/nxvpn/profile/: EditProfileActivity.java  ProfileAdapter.java  ProfileManager.java  VpnProfile.java
app/src/main/java/com/nxdevelopers/nxvpn/security/: AppSecurityManager.java
app/src/main/java/com/nxdevelopers/nxvpn/service/: TunnelManager.java
app/src/main/java/com/trilead/ssh2/: DynamicPortForwarder.java
app/src/main/jni/: CMakeLists.txt  lwip_tunnel.c  lwipopts.h  socks5_relay.c  socks5_relay.h
app/src/main/jni/arch/: sys_arch.c
app/src/main/res/drawable/: arrow_card.xml  baseline_app_settings_alt_24.xml  divider.xml  divider_white.xml  ic_baseline_article_24.xml  ic_close.xml
app/src/main/res/layout/: activity_allowed_app.xml  activity_app_settings.xml  activity_edit_profile.xml  activity_main.xml  activity_main_drawer.xml  empty.xml  export_config.xml  item_app.xml  item_profile.xml  layout_allowed_app_row.xml  list_item_log_drawer.xml  nav_header.xml  toolbar_main.xml
app/src/main/res/menu/: logs_menu.xml  main_menu.xml  profile_item_menu.xml
app/src/main/res/raw/: pdnsd_conf
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+22 files in other folders)
